style/base/base.scss
/* ... */
.user-admin {
    border-bottom: 1px solid #ddd;
    margin: 0 0;
    padding: 0 0 1em;
}
.mini-user-admin {
    text-align: center;
    .avatar-cutter-120 {
        display: inline-block;
    }
    .name {
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
    }
}

#subnav + p, #subnav + div.paragraph {
    margin-top: 1.5em;
}

ul.emails {
    margin: 1em 0;
    max-width: 600px;
    padding: 0;
    li {
        border-bottom: 1px dashed #ccc;
        line-height: 30px;
        list-style: none;
        margin: 0.33em 0.5em;
        padding: 0 0 0.33em;
        &:last-child {
            border-bottom: none;
        }
    }
    span.address {
        display: inline-block;
        max-width: 250px;
        vertical-align: top;
        word-wrap: break-word;
    }
    button {
        float: right;
        margin-left: 1em;
    }
}

.faq dt {
    margin: 0;
    padding-bottom: 0.33em;
    &:target, &:target + dd {
        background-color: rgba(yellow, 0.3);
        animation: target-flash 1.5s 1;
    }
    & > a {
        color: #000;
        position: relative;
        text-decoration: none;
        &:hover:after {
            content: ' §';
        }
    }
}
.faq dd {
    margin-bottom: 1.5em;
}
.faq dd > p {
    margin-bottom: 0.33em;
}

h2, h3, h4, h5, h6 {
    &:target {
        background-color: rgba(yellow, 0.2);
        animation: target-flash 1.5s 1;
    }
}

@keyframes target-flash {
    0% { background-color: rgba(yellow, 0.7); }
}

section.profile-statement, section.community-sidebar, section.invoice-details {
    word-break: break-all;
    word-wrap: anywhere;
    overflow-wrap: anywhere;
    h1 {
        font-size: $font-size-h3;
        margin: $font-size-h3 0 10px;
    }
    h2 {
        font-size: $font-size-h4;
        margin: $font-size-h4 0 10px;
    }
    h3 {
        font-size: $font-size-medium;
        margin: $font-size-medium 0 10px;
    }
    h4, h5, h6 {
        font-size: $font-size-base;
        margin: $font-size-base 0 10px;
    }
    img {
        max-width: 100%;
    }
}
.profile-statement {
    font-family: $font-family-serif;
    h1, h2, h3, h4 {
        color: #956410;
    }
    &.embedded {
        border-left: 2px solid $gray-lighter;
        padding-left: 2ex;
    }
    &.raw {
        white-space: pre-line;
    }
}
section.community-sidebar {
    h1, h2, h3, h4 {
        color: #888;
    }
}
section.invoice-details {
    border-left: 2px solid $gray-light;
    margin: 0 0 1em 1.5em;
    padding-left: 0.5em;

    table {
        td, th {
            border: 1px solid #ccc;
            padding: 0.3em 0.4em;
        }
    }
}

.notification {
    padding: 14px;
    text-align: center;
}

.notification-error {
    background-color: $state-danger-bg;
    border-top: 1px solid $state-danger-border;
    color: $state-danger-text;
}

.notification-success {
    background-color: $state-success-bg;
    border-color: $state-success-border;
    color: $state-success-text;
}

.notification-warning {
    background-color: $state-warning-bg;
    border-color: $state-warning-border;
    color: $state-warning-text;
}

#notification-area-bottom {
    bottom: 0;
    left: 0;
    position: fixed;
    right: 0;
    z-index: 10000;
}

.dropdown-hover {
    display: inline-block;
    position: relative;
    .dropdown-menu {
        margin-top: 0;
        &::before, &::after {
            content: ' ';
            display: block;
            margin-left: -50%;
            position: absolute;
            width: 200%;
            z-index: -1;
        }
        &::before {
            height: 100%;
            margin-top: -5px;
        }
        &::after {
            border-radius: 0 0 25px 25px;
            height: 75px;
        }
    }
    &:hover .dropdown-menu, .dropdown-toggle:focus + .dropdown-menu {
        display: block;
    }
}

a.dropdown-toggle {
    display: block;
    &:active, &:focus, &:hover {
        text-decoration: none;
    }
}

#history {
    td, th {
        text-align: right;
        &[title] {
            cursor: help;
        }
        &:first-child {
            text-align: left;
        }
    }
    > tbody > tr {
        border-top: 1px dashed #ddd;
    }
    td, th {
        border: none;
    }
    .day-open {
        border-top-style: solid;
        font-weight: bold;
    }
    tr.zero {
        .amount, .wallet, .fees, .bank {
            color: #999;
        }
    }
    td.id {
        font-family: $font-family-monospace;
    }
}

@media (max-width: $screen-md-min - 1) {
    #history {
        display: block;
        .balances, .fees, .bank, .method, .id {
            display: none;
        }
        thead, tbody, td {
            display: block;
        }
        tr {
            display: flex;
            justify-content: space-between;
        }
    }
}

.valign-middle tbody > tr > td {
    vertical-align: middle;
}

.payment-card {
    background-color: #eaeaea;
    border: 1px solid #ddd;
    border-radius: 8px;
    height: 171px;
    margin: 0.5em 1em 0.5em 0;
    padding: 1em 0;
    position: relative;
    width: 270px;
    & > .card-number {
        margin: 25px 0 10px 0;
        padding: 0 15px;
    }
    & > .card-expiry, & > .cvv {
        float: left;
        padding: 0 15px;
        width: 50%;
    }
    & > .card-brand {
        bottom: 0;
        color: #888;
        padding: 3px 6px;
        position: absolute;
        right: 15px;
        &:empty {
            display: none;
        }
    }
}
.payment-card-row {
    display: flex;
    flex-flow: row wrap;
    & > .aside {
        flex-basis: 320px;
        flex-grow: 3;
        padding: 0.5em 0;
    }
}

.proceed {
    margin-top: 1em;
    .btn:not(.btn-lg) {
        margin-top: 0.5em;
    }
}

.powered-by {
    margin-top: 4em;
    text-align: center;
}
/* ... */

